unpackaged/main/default/objects/Checklist3__c/Checklist3__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración del checklist planta3</description>
    <label>CheckList3</label>
</CustomObject>