unpackaged/main/default/objects/Checklist3__c/fields/AcabadoInteriorNivelTres__c.field-meta.xml
<CustomField>
    <fullName>AcabadoInteriorNivelTres__c</fullName>
    <label>Acabado interior N3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>