unpackaged/main/default/objects/Checklist3__c/fields/AcabadosLosaAzotea__c.field-meta.xml
<CustomField>
    <fullName>AcabadosLosaAzotea__c</fullName>
    <label>Acabados en losa azotea</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>