unpackaged/main/default/objects/Checklist3__c/fields/AcaboInterior__c.field-meta.xml
<CustomField>
    <fullName>AcaboInterior__c</fullName>
    <label>Acabado interior</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>