unpackaged/main/default/objects/Checklist3__c/fields/AccesoriosElctricosPrepNivelTres__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElctricosPrepNivelTres__c</fullName>
    <inlineHelpText>Acabados eléctricos y preparación para minisplit guiada</inlineHelpText>
    <label>Accesorios eléctricos y preparación N3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>