unpackaged/main/default/objects/Checklist3__c/fields/AccesoriosElectricos__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricos__c</fullName>
    <label>Accesorios eléctricos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>