unpackaged/main/default/objects/Checklist3__c/fields/AzulejosPisosZoclo__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisosZoclo__c</fullName>
    <label>Azulejos, pisos y zoclo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>