unpackaged/main/default/objects/Checklist3__c/fields/CalentadorValvulaAlivioColocado__c.field-meta.xml
<CustomField>
    <fullName>CalentadorValvulaAlivioColocado__c</fullName>
    <label>Calentador y válvula de alivio colocado</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>