unpackaged/main/default/objects/Checklist3__c/fields/CampoAbierto__c.field-meta.xml
<CustomField>
    <fullName>CampoAbierto__c</fullName>
    <label>Campo abierto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>