unpackaged/main/default/objects/Checklist3__c/fields/KitEcologicoCompleto__c.field-meta.xml
<CustomField>
    <fullName>KitEcologicoCompleto__c</fullName>
    <label>Kit ecológico completo (si aplica)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>