unpackaged/main/default/objects/Checklist3__c/fields/MarcosPuertasVentanasChapasNivelTres__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasChapasNivelTres__c</fullName>
    <label>Marcos, puertas, ventanas, chapas N3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>