unpackaged/main/default/objects/Checklist3__c/fields/PisoCeramicoBanqueta__c.field-meta.xml
<CustomField>
    <fullName>PisoCeramicoBanqueta__c</fullName>
    <label>Piso cerámico y banqueta</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>