unpackaged/main/default/objects/Checklist3__c/fields/PruebaElectricaRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaElectricaRealizada__c</fullName>
    <label>Prueba eléctrica realizada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>