unpackaged/main/default/objects/Checklist3__c/fields/PruebaHidraulicaRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaHidraulicaRealizada__c</fullName>
    <label>Prueba hidráulica realizada</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>