unpackaged/main/default/objects/Checklist3__c/fields/PruebasSanitariasRealizadas__c.field-meta.xml
<CustomField>
    <fullName>PruebasSanitariasRealizadas__c</fullName>
    <label>Pruebas sanitarias realizadas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>