unpackaged/main/default/objects/Checklist3__c/fields/SanitariosLavabosAccBanoNivelTres__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccBanoNivelTres__c</fullName>
    <label>Sanitarios, lavabos, acc. de baño N3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>