unpackaged/main/default/objects/Checklist3__c/fields/SanitariosLavabosAccesoriosBano__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccesoriosBano__c</fullName>
    <label>Sanitarios, lavabos, acc. de baño</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>